--- a/chrome/manifest.json
+++ b/chrome/manifest.json
@@ -3,7 +3,7 @@
 
     "name": "Skiptco",
     "description": "This extension fixes twitter redirection links",
-    "version": "1.2.2",
+    "version": "%VERSION%",
 
       "content_scripts": [
         {
