--- a/firefox/package.json
+++ b/firefox/package.json
@@ -5,7 +5,7 @@
   "author": "Alban Crommer",
   "license": "GPL v3",
   "main": "./lib/main.js",
-  "version": "2.0.0",
+  "version": "%VERSION%",
   "engines": {
     "firefox": ">=40.0",
     "fennec": ">=40.0"
